--- a/src/main/resources/sign up.fxml
+++ b/src/main/resources/sign up.fxml
@@ -2,20 +2,22 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane prefHeight="355.0" prefWidth="322.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.Controllers.SignUpController">
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints hgrow="SOMETIMES" />
     </columnConstraints>
     <rowConstraints>
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -29,7 +31,7 @@
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <children>
-        <PasswordField promptText="Password" GridPane.rowIndex="4">
+        <PasswordField prefColumnCount="0" promptText="Password" GridPane.rowIndex="4">
             <font>
                 <Font name="Bookman Old Style" size="12.0" />
             </font>
@@ -73,7 +75,7 @@
                 </Label>
                 <Hyperlink text="Log in" textFill="#f96167" underline="true">
                     <HBox.margin>
-                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                        <Insets bottom="20.0" left="-15.0" right="20.0" top="20.0" />
                     </HBox.margin>
                     <font>
                         <Font name="Bookman Old Style" size="12.0" />
@@ -110,19 +112,52 @@
         </TextField>
         <HBox alignment="CENTER_LEFT" GridPane.rowIndex="6">
             <children>
-                <Label text="Gender:" />
-                <CheckBox mnemonicParsing="false" text="Male">
-               <HBox.margin>
-                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-               </HBox.margin></CheckBox>
-                <CheckBox mnemonicParsing="false" text="Female">
-               <HBox.margin>
-                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-               </HBox.margin></CheckBox>
+            <ButtonBar cache="true" prefHeight="40.0" prefWidth="200.0">
+               <buttons>
+                      <Label text="Gender:">
+                     <font>
+                        <Font name="Bookman Old Style" size="12.0" />
+                     </font>
+                  </Label>
+                  <RadioButton mnemonicParsing="false" text="Male">
+                     <toggleGroup>
+                        <ToggleGroup fx:id="SpolOdabir" />
+                     </toggleGroup>
+                     <font>
+                        <Font name="Bookman Old Style" size="12.0" />
+                     </font>
+                  </RadioButton>
+                  <RadioButton mnemonicParsing="false" text="Female" toggleGroup="$SpolOdabir">
+                     <font>
+                        <Font name="Bookman Old Style" size="12.0" />
+                     </font>
+                  </RadioButton>
+               </buttons>
+            </ButtonBar>
             </children>
             <GridPane.margin>
                 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
             </GridPane.margin>
         </HBox>
+      <HBox alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+         <children>
+            <Button fx:id="minimizeButton" mnemonicParsing="false" onAction="#minimizeAction" prefHeight="52.0" prefWidth="22.0" style="-fx-background-color: #f96167;" text="_" textFill="WHITE">
+               <HBox.margin>
+                  <Insets bottom="20.0" left="20.0" right="-20.0" top="20.0" />
+               </HBox.margin>
+               <font>
+                  <Font name="Bookman Old Style Bold" size="12.0" />
+               </font>
+            </Button>
+            <Button alignment="TOP_CENTER" contentDisplay="RIGHT" mnemonicParsing="false" onAction="#exitAction" style="-fx-background-color: #f96167;" text="X" textAlignment="RIGHT" textFill="WHITE" fx:id="xButton">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+               <HBox.margin>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+               </HBox.margin>
+            </Button>
+         </children>
+      </HBox>
     </children>
 </GridPane>
