--- a/src/main/resources/fxml/adminPanel.fxml
+++ b/src/main/resources/fxml/adminPanel.fxml
@@ -2,100 +2,138 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="575.0" prefWidth="745.0" style="-fx-background-color: #fce77d;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
-   <top>
-      <HBox alignment="TOP_RIGHT" prefHeight="36.0" prefWidth="635.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button contentDisplay="CENTER" mnemonicParsing="false" text="Sign out">
-               <font>
-                  <Font name="Bookman Old Style" size="12.0" />
-               </font>
-               <HBox.margin>
-                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-               </HBox.margin>
-            </Button>
-         </children>
-      </HBox>
-   </top>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="654.0" prefWidth="826.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.Controllers.AdminPanelController">
+   <center>
+      <TabPane fx:id="TabPaneId" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+        <tabs>
+          <Tab fx:id="DashboardTabId" text="Dashboard">
+               <content>
+                  <BorderPane prefHeight="200.0" prefWidth="200.0" />
+               </content>
+               <content>
+                  <BorderPane prefHeight="200.0" prefWidth="200.0" />
+               </content>
+          </Tab>
+          <Tab fx:id="CustomersTabId" text="Customers">
+               <content>
+                  <BorderPane prefHeight="200.0" prefWidth="200.0" />
+               </content>
+               <content>
+                  <VBox prefHeight="816.0" prefWidth="461.0">
+                     <children>
+                        <ToolBar prefHeight="40.0" prefWidth="200.0">
+                          <items>
+                            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="75.0" text="ALL" />
+                              <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="75.0" text="ADD" />
+                          </items>
+                        </ToolBar>
+                        <TableView prefHeight="602.0" prefWidth="710.0">
+                          <columns>
+                            <TableColumn prefWidth="100.0" text="C1" />
+                            <TableColumn prefWidth="100.0" text="C2" />
+                              <TableColumn prefWidth="100.0" text="Column X" />
+                              <TableColumn prefWidth="100.0" text="Column X" />
+                              <TableColumn prefWidth="100.0" text="Column X" />
+                              <TableColumn prefWidth="108.0" text="Column X" />
+                              <TableColumn prefWidth="100.0" text="Column X" />
+                          </columns>
+                        </TableView>
+                     </children>
+                  </VBox>
+               </content>
+          </Tab>
+            <Tab fx:id="BookingsTabId" text="Bookings">
+               <content>
+                  <BorderPane prefHeight="200.0" prefWidth="200.0" />
+               </content>
+               <content>
+                  <VBox prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <ToolBar prefHeight="40.0" prefWidth="200.0">
+                          <items>
+                            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="75.0" text="ALL" />
+                              <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="75.0" text="ADD" />
+                          </items>
+                        </ToolBar>
+                        <TableView prefHeight="594.0" prefWidth="710.0">
+                          <columns>
+                            <TableColumn prefWidth="141.0" text="C1" />
+                            <TableColumn prefWidth="141.0" text="C2" />
+                              <TableColumn prefWidth="141.0" text="Column X" />
+                              <TableColumn prefWidth="141.0" text="Column X" />
+                              <TableColumn prefWidth="141.0" text="Column X" />
+                          </columns>
+                        </TableView>
+                     </children>
+                  </VBox>
+               </content>
+            </Tab>
+            <Tab fx:id="ToursTabId" text="Tours">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <VBox layoutY="-3.0" prefHeight="628.0" prefWidth="710.0">
+                           <children>
+                              <ToolBar prefHeight="40.0" prefWidth="200.0">
+                                <items>
+                                  <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="75.0" text="ALL" />
+                                    <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="75.0" text="ADD" />
+                                </items>
+                              </ToolBar>
+                              <TableView fx:id="toursListId" prefHeight="589.0" prefWidth="710.0">
+                                <columns>
+                                  <TableColumn fx:id="idColumn" prefWidth="214.39997100830078" text="id" />
+                                  <TableColumn fx:id="destinationColumn" minWidth="0.0" prefWidth="235.99996948242188" text="destination" />
+                                    <TableColumn fx:id="priceColumn" prefWidth="257.5999755859375" text="price" />
+                                </columns>
+                              </TableView>
+                           </children>
+                        </VBox>
+                     </children>
+                  </AnchorPane>
+              </content>
+            </Tab>
+        </tabs>
+      </TabPane>
+   </center>
    <left>
-      <VBox alignment="CENTER" prefHeight="508.0" prefWidth="142.0" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER" prefHeight="380.0" prefWidth="116.0" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="82.0" fitWidth="110.0" pickOnBounds="true" preserveRatio="true">
+            <Button fx:id="dashboardId" alignment="CENTER" mnemonicParsing="false" onAction="#dashboardIdAction" prefHeight="26.0" prefWidth="158.0" text="Dashboard">
                <VBox.margin>
-                  <Insets bottom="-10.0" left="-10.0" right="-10.0" top="-100.0" />
-               </VBox.margin>
-               <image>
-                  <Image url="@../img/icon.png" />
-               </image>
-            </ImageView>
-            <Button alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #f96167;" text="Dashboard" textFill="WHITE">
-               <VBox.margin>
-                  <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
-               </VBox.margin>
-               <font>
-                  <Font name="Bookman Old Style" size="12.0" />
-               </font>
-            </Button>
-            <Button alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #f9616d;" text="Users" textFill="WHITE">
-               <VBox.margin>
-                  <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
-               </VBox.margin>
-               <font>
-                  <Font name="Bookman Old Style" size="12.0" />
-               </font>
-            </Button>
-            <Button alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #f96167;" text="Bookings" textFill="WHITE">
-               <font>
-                  <Font name="Bookman Old Style" size="12.0" />
-               </font>
-               <VBox.margin>
-                  <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </VBox.margin>
             </Button>
-            <Button alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #f96167;" text="Tours" textFill="WHITE">
+            <Button fx:id="customersId" alignment="CENTER" mnemonicParsing="false" onAction="#customersIdAction" prefHeight="26.0" prefWidth="82.0" text="Customers">
                <VBox.margin>
-                  <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </VBox.margin>
-               <font>
-                  <Font name="Bookman Old Style" size="12.0" />
-               </font>
+            </Button>
+            <Button fx:id="bookingsId" alignment="CENTER" mnemonicParsing="false" onAction="#bookingsIdAction" prefHeight="26.0" prefWidth="106.0" text="Bookings">
+               <VBox.margin>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="toursId" alignment="CENTER" mnemonicParsing="false" onAction="#toursIdAction" prefHeight="26.0" prefWidth="125.0" text="Tours">
+               <VBox.margin>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="logOutId" mnemonicParsing="false" onAction="#logOutIdAction" prefHeight="26.0" prefWidth="77.0" text="Log Out">
+               <VBox.margin>
+                  <Insets top="100.0" />
+               </VBox.margin>
             </Button>
          </children>
       </VBox>
    </left>
-   <center>
-      <HBox prefHeight="290.0" prefWidth="349.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="150.0" prefWidth="173.0" style="-fx-background-color: #f96167;" text="Create your &#10;adventure&#10;&#10;" textAlignment="CENTER" textFill="WHITE">
-               <HBox.margin>
-                  <Insets bottom="65.0" left="65.0" right="65.0" top="160.0" />
-               </HBox.margin>
-               <font>
-                  <Font name="Bookman Old Style" size="18.0" />
-               </font>
-            </Button>
-            <MenuButton alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="150.0" prefWidth="173.0" style="-fx-background-color: #f96167;" text="See offers" textAlignment="CENTER" textFill="WHITE">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Action 1" />
-                <MenuItem mnemonicParsing="false" text="Action 2" />
-              </items>
-               <HBox.margin>
-                  <Insets bottom="65.0" left="65.0" right="65.0" top="160.0" />
-               </HBox.margin>
-               <font>
-                  <Font name="Bookman Old Style" size="18.0" />
-               </font>
-            </MenuButton>
-         </children>
-      </HBox>
-   </center>
 </BorderPane>
