--- a/src/main/resources/fxml/userPanel.fxml
+++ b/src/main/resources/fxml/userPanel.fxml
@@ -1,13 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.net.URL?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<BorderPane fx:id="userPanel" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.Controllers.UserPanelController">
+   <stylesheets>
+      <URL value="@/css/userPanel.css" />
+   </stylesheets>
+   <center>
+      <VBox alignment="CENTER" prefHeight="390.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button fx:id="createYourAdventureId" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#createYourAdventureAction" prefHeight="86.0" prefWidth="250.0" style="-fx-background-color: #FCE77D;" text="CREATE YOUR ADVENTURE" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin>
+               <font>
+                  <Font name="Bookman Old Style Bold" size="18.0" />
+               </font>
+            </Button>
+            <Button fx:id="locationsId" mnemonicParsing="false" onAction="#locationsAction" prefHeight="38.0" prefWidth="250.0" style="-fx-background-color: #FCE77D;" text="LOCATIONS" textAlignment="CENTER" textFill="WHITE">
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin>
+               <font>
+                  <Font name="Bookman Old Style Bold" size="18.0" />
+               </font>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#myBookingsAction" prefHeight="38.0" prefWidth="250.0" style="-fx-background-color: #FCE77D;" text="MY BOOKINGS" textFill="WHITE">
+               <font>
+                  <Font name="Bookman Old Style Bold" size="18.0" />
+               </font>
+            </Button>
+         </children>
+      </VBox>
+   </center>
+   <top>
+      <Button fx:id="logOutId" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#logOutAction" style="-fx-background-color: #f96167;" text="LOG OUT " textAlignment="CENTER" textFill="WHITE" BorderPane.alignment="CENTER_RIGHT">
+         <BorderPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </BorderPane.margin>
+         <font>
+            <Font name="Bookman Old Style Bold" size="12.0" />
+         </font>
+      </Button>
+   </top>
+</BorderPane>
